@@ -1,7 +1,9 @@
 ﻿[B]Changelog[/B]
-* Fixed: Reverted #1074 SVT Categories (Fixes #1080)
+* Added: search to UR Play (Fixes #1084).
+* Changed: UR Play now uses HTTPS.
 
 [I]Previous changes[/I]
+* Fixed: Reverted #1074 SVT Categories (Fixes #1080)
 * Fixed: SVT Categories (Fixes #1074)
 * Fixed: SVT Öppet arkiv playback (Fixes #1066)
 * Fixed: Dplay.no had Swedish subs (Fixes #959)
